# kelly-monte-carlo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: __init__.py  main.py  state.py
src/app/components/: charts.py  metrics_display.py  setup_form.py
src/app/pages/: 1_Setup_Config.py  2_Simulation.py
src/kelly_mc/: __init__.py  analytics.py  engine.py  kelly.py  models.py  validators.py
tests/: conftest.py  test_analytics.py  test_engine.py  test_kelly.py  test_models.py  test_validators.py
