[project]
name = "kelly-monte-carlo"
version = "0.1.0"
description = "Monte Carlo portfolio simulation with Kelly Criterion sizing"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "streamlit>=1.38,<2",
    "plotly>=5.18,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
